[package]
name = "crisp-status-reporter"
version = "1.2.1"
description = "Crisp Status Reporter for Rust."
readme = "README.md"
license = "MIT"
edition = "2018"
homepage = "https://github.com/crisp-im/rs-crisp-status-reporter"
repository = "https://github.com/crisp-im/rs-crisp-status-reporter.git"
keywords = ["crisp", "microservices", "monitoring", "integration"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[badges]
travis-ci = { repository = "crisp-im/rs-crisp-status-reporter", branch = "master" }

[lib]
name = "crisp_status_reporter"

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
sys-info = "0.5"
reqwest = "0.8"

[dev-dependencies]
env_logger = "0.5"
