[package]
name = "crisp-status-reporter"
version = "1.3.1"
description = "Crisp Status Reporter for Rust."
readme = "README.md"
license = "MIT"
edition = "2018"
homepage = "https://github.com/crisp-im/rs-crisp-status-reporter"
repository = "https://github.com/crisp-im/rs-crisp-status-reporter.git"
keywords = ["crisp", "microservices", "monitoring", "integration"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[lib]
name = "crisp_status_reporter"

[dependencies]
log = "0.4"
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
serde_json = "1.0"
sys-info = "0.7"
base64 = "0.12"
http_req = { version = "0.9", features = ["rust-tls"], default-features = false }

[dev-dependencies]
env_logger = "0.7"
